<resources>
    <string name="app_name">Effervescence\'21 CA</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>


    !-- strings.xml -->
    <string name="campus_amba">

            Campus Ambassador
        </string>
    <!-- strings.xml -->
    <string name="effervescen">

            EFFERVESCENCE
        </string>


    <!-- strings.xml -->
    <string name="date">

            Sunday, August 29
        </string>


    <!-- strings.xml -->
    <string name="title">

            Hi User!
        </string>

    <!-- strings.xml -->
    <string name="you_are_cur">

        You are currently at 5th Position with\n800 Points
    </string>


    <!-- strings.xml -->
    <string name="you_need_10">

        You Need 100 points to rank up...
    </string>


    <!-- strings.xml -->
    <string name="points_hist">

        Points History
    </string>


    <!-- strings.xml -->
    <string name="event_1">

        Event 1
    </string>
    <!-- strings.xml -->
    <string name="pts">

        50 pts
    </string>  <!-- strings.xml -->

    <!-- strings.xml -->
    <string name="sign_out">

        Sign Out
    </string> <!-- strings.xml -->
    <string name="contacts">

        Contacts
    </string>
    <string name="we_re_here_">

We are here to resolve your problems , feel free to contact :)
</string>

    <!-- strings.xml -->
    <string name="about_us">

        About Us
    </string>


    <!-- strings.xml -->
    <string name="about_ca">

        About CA
    </string>
    <string name="title_activity_bottom_navigation">Bottom_Navigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="award">Award</string>
    <string name="server">Task</string>

    <string name="user">User</string>


</resources>