<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seven_page">

    <RelativeLayout
        android:id="@+id/frame_36410"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#5C6DC8"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/campus_amba"
            android:layout_width="223dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="Campus Ambassador"

            android:textAppearance="@style/campus_amba"
            android:gravity="center_vertical"
            />




        <!-- EFFERVESCENCE ‘21 -->
        <TextView
            android:id="@+id/effervescen"
            android:layout_width="100dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:text="@string/effervescen"
            android:textAppearance="@style/effervescen"
            android:gravity="center_vertical"
            />





    </RelativeLayout>



    <!-- Date -->
    <TextView
        android:id="@+id/date"
        android:layout_width="183dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:text="@string/date"
        android:textAppearance="@style/date"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        />




    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="301dp"
        android:layout_height="67dp"
        android:layout_alignEnd="@+id/date"
        android:layout_alignRight="@+id/date"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="-114dp"
        android:layout_marginRight="-114dp"
        android:layout_marginBottom="491dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/title"
        android:textAppearance="@style/title" />


    <!-- image 296 -->
    <View
        android:id="@+id/image_296"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="232dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="176dp"
        android:background="@drawable/image"
        />
    <!-- You are currently at 5th Position with 800 Points -->
    <TextView
        android:id="@+id/you_are_cur"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="254dp"
        android:text="@string/you_are_cur"
        android:textAppearance="@style/you_are_cur"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />




    <!-- You Need 100 points to rank up... -->
    <TextView
        android:id="@+id/you_need_10"
        android:layout_width="316dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="318dp"
        android:text="@string/you_need_10"
        android:textAppearance="@style/you_need_10"
        android:lineSpacingExtra="3sp"
        android:gravity="center_vertical"
        />


    <!-- Points History -->
    <!-- Points History -->
    <TextView
        android:id="@+id/points_hist"
        android:layout_width="123dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="388dp"
        android:text="@string/points_hist"
        android:textAppearance="@style/points_hist"
        android:lineSpacingExtra="1sp"
        android:gravity="center_vertical"
        />




    <!-- Rectangle 971 -->
    <View


        android:id="@+id/rectangle_9"
        android:layout_width="328dp"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="376dp"

        android:elevation="4dp"




        />


    <!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="439dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />

    <!-- Group 36643 -->
    <View
        android:id="@+id/group_36643"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="439dp"
        android:background="#00000000"
        />

    <!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="439dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />







    <View
        android:id="@+id/group_36644"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="471dp"
        android:background="#00000000"
        />



    <!-- Group 36645 -->
    <View
        android:id="@+id/group_36645"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="503dp"
        android:background="#00000000"
        />



    <!-- Group 36646 -->
    <View
        android:id="@+id/group_36646"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="535dp"
        android:background="#00000000"
        />

    <!-- Group 36647 -->
    <View
        android:id="@+id/group_36647"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="567dp"
        android:background="#00000000"
        />

    <!-- Group 36648 -->
    <View
        android:id="@+id/group_36648"
        android:layout_width="283dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="599dp"
        android:background="#00000000"
        />

    <!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="471dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />
    <!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="471dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />

    <!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="503dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />

    <!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="503dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />

    <!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="535dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />
    <!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="535dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        />
    <!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="567dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        /><!-- Event 1 -->
    <TextView
        android:id="@+id/event_1"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="599dp"
        android:text="@string/event_1"
        android:textAppearance="@style/event_1"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        /><!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="599dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        /><!-- 50 pts -->
    <TextView
        android:id="@+id/pts"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="567dp"
        android:text="@string/pts"
        android:textAppearance="@style/pts"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.5sp"
        android:gravity="top"
        /><!-- bell -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bell"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"

        android:background="@drawable/bell"
        /><!-- more-vertical -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/more_vertic"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="320dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"

        android:background="@drawable/more_vertical"
        />


    <!-- Group 36653 -->
    <View
        android:id="@+id/group_36653"
        android:layout_width="140dp"
        android:layout_height="132dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="216dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:background="#00000000"
        />
    <!-- Sign Out -->
    <TextView
        android:id="@+id/sign_out"
        android:layout_width="88dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:text="@string/sign_out"
        android:textAppearance="@style/sign_out"
        android:gravity="center_vertical"
        />

    <!-- Group 36655 -->
    <View
        android:id="@+id/group_36655"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="229dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:background="#00000000"



        />
    <!-- Contacts -->
    <TextView
        android:id="@+id/contacts"
        android:layout_width="68dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:text="@string/contacts"
        android:textAppearance="@style/contacts"
        android:gravity="center_vertical"
        />


    <!-- Group 36656 -->
    <View
        android:id="@+id/group_36656"
        android:layout_width="106dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="230dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:background="#00000000"
        />

    <!-- About Us -->
    <TextView
        android:id="@+id/about_us"
        android:layout_width="68dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:text="@string/about_us"
        android:textAppearance="@style/about_us"
        android:gravity="center_vertical"
        />



    <!-- Effe Logo -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/effe_logo"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="230dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"

        android:background="@drawable/effe_logo"
        />

    <!-- Group 36657 -->
    <View
        android:id="@+id/group_36657"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="229dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:background="#00000000"
        />


    <!-- About CA -->
    <TextView
        android:id="@+id/about_ca"
        android:layout_width="68dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:text="@string/about_ca"
        android:textAppearance="@style/about_ca"
        android:gravity="center_vertical"
        />




    <!-- help-circle -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/help_circle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="229dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"

        android:background="@drawable/help_circle"
        />












</RelativeLayout>